--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-numpy
-pandas
-scipy
-scikit-learn
-bitarray
+numpy~=1.19.1
+pandas~=1.1.1
+scipy~=1.5.2
+scikit-learn~=0.22.2.post1
+bitarray~=1.5.2
 xgboost
+lightgbm~=2.3.0
+catboost~=0.24
+matplotlib~=3.3.1
+pytest~=6.0.1
+setuptools~=49.6.0
+mysqlclient~=1.4.6
+imbalanced-learn
