--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy~=1.19.1
 pandas~=1.1.1
 scipy~=1.5.2
-scikit-learn~=0.22.2.post1
+scikit-learn~=0.23.2
 bitarray~=1.5.2
 xgboost
 lightgbm~=2.3.0
