--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy~=1.19.1
-pandas~=1.1.1
-scipy~=1.5.2
-scikit-learn~=0.23.2
-bitarray~=1.5.2
-xgboost
-lightgbm~=2.3.0
-catboost~=0.24
-imbalanced-learn
+numpy>=1.22.3
+scipy>=1.8.0
+scikit-learn>=1.0.2
+gmpy2>=2.1.2
+xgboost>=1.5.2
+lightgbm>=3.3.2
+catboost>=1.0.4
+pandas>=1.4.1
+bitarray>=2.5.1
